# rministat

./: .gitignore  Cargo.toml
benches/: read.rs
src/: lib.rs  main.rs  plot.rs  work.rs
test/data/: 1024.txt  1024_bad.txt
