[package]
name = "ministat"
version = "0.1.0"
authors = ["Mike Rashkovsky <mrashkovsky@backtrace.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.0"
paste = "1.0"
criterion = "0.3"

[[bench]]
name = "read"
harness = false